# ChangeLog for dev-python/attest
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
  Use distutils.eclass via jnrowe-pypi.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> -attest-0.5.2.ebuild,
  attest-0.5.3.ebuild:
  Keyworded x86.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
  Keyworded amd64.

  20 Mar 2012; James Rowe <jnrowe@gmail.com> attest-0.5.2.ebuild:
  Keyworded amd64.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> attest-0.5.2.ebuild:
  Switched to EAPI4.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
  Switched to EAPI4.

  13 Mar 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
  simplejson and lxml are required for a few assertions, but may not always be
  needed.

*attest-0.5.3 (09 Mar 2012)

  09 Mar 2012; James Rowe <jnrowe@gmail.com> +attest-0.5.3.ebuild:
  Version bump [566].

  03 Mar 2012; James Rowe <jnrowe@gmail.com> attest-0.5.2.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  27 Jun 2011; James Rowe <jnrowe@gmail.com> attest-0.5.2.ebuild:
  Keyworded ~x86.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> attest-0.5.2.ebuild:
  Support installs without fancy output.

*attest-0.5.2 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +attest-0.5.2.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [399].
