@@ -3,14 +3,8 @@
 # $Header: $
 
 EAPI=4
-
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="*"
 # 3.2 is restricted due to contextlib.nested usage
-RESTRICT_PYTHON_ABIS="3.2"
-DISTUTILS_SRC_TEST="setup.py"
-PYPI_OLD_DISTUTILS=1
-
+PYTHON_COMPAT="python2_5 python2_6 python2_7 python3_1"
 MY_PN="Attest"
 
 inherit jnrowe-pypi
@@ -22,15 +16,16 @@ SLOT="0"
 KEYWORDS="amd64 x86"
 IUSE="minimal test"
 
-# The package correctly handles the 2.6 json module, but there is no *usable*
-# way to express the multi-ABI test dependencies with upstream's distutils
-# eclass.
-DEPEND="test? ( dev-python/simplejson )"
+DEPEND="python_targets_python2_5? ( test? ( dev-python/simplejson ) )"
 RDEPEND="!minimal? (
 		dev-python/lxml
 		dev-python/progressbar
 		dev-python/pygments
-		|| ( >=dev-lang/python-2.6 dev-python/simplejson )
+		python_targets_python2_5? ( dev-python/simplejson )
 	)"
 
-DOCS="AUTHORS.rst CHANGES.rst"
+DOCS=(AUTHORS.rst CHANGES.rst)
+
+python_test() {
+	"${PYTHON}" ./setup.py test || die "Tests failed with ${PYTHON}"
+}
