@@ -1,13 +1,14 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup test
-DEPEND=test? ( dev-python/simplejson ) dev-lang/python
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=python_targets_python2_5? ( test? ( dev-python/simplejson ) ) !<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_1? ( dev-lang/python:3.1 )
 DESCRIPTION=Modern, Pythonic unit testing
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/Attest/
-IUSE=minimal test
+IUSE=minimal test python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_1
 KEYWORDS=amd64 x86
 LICENSE=BSD-2
-RDEPEND=!minimal? ( dev-python/lxml dev-python/progressbar dev-python/pygments || ( >=dev-lang/python-2.6 dev-python/simplejson ) ) dev-lang/python
+RDEPEND=!minimal? ( dev-python/lxml dev-python/progressbar dev-python/pygments python_targets_python2_5? ( dev-python/simplejson ) ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_1? ( dev-lang/python:3.1 )
+REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_1 )
 SLOT=0
 SRC_URI=mirror://pypi/A/Attest/Attest-0.5.3.tar.gz
-_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	a95b1bf9d854485ca6fdbb47df2975aa	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=eb955419c5d1251b137c85b001674595
+_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	a95b1bf9d854485ca6fdbb47df2975aa	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9649998e4ceeb56a6745cc819dbafcb6	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=52608ddae1defcee0e3b6573b7719211
