@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 May 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
+  Switched to python-distutils-ng eclass.
+
   08 Apr 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
   Use distutils.eclass via jnrowe-pypi.
 
